--- a/app/src/main/res/layout/dialog_add_polygon.xml
+++ b/app/src/main/res/layout/dialog_add_polygon.xml
@@ -75,25 +75,168 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/twoptional"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Opcionais"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/tilRaio"
+        tools:layout_editor_absoluteX="16dp" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tiIdentificador"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/Identificador"
+        app:layout_constraintTop_toBottomOf="@id/twoptional">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etIdentificador"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tiDescricao"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/Descricao"
+
+        app:layout_constraintTop_toBottomOf="@id/tiIdentificador">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etDescricao"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:inputType="textMultiLine|textImeMultiLine"
+            android:gravity="top|start"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/twcor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Cor:"
+        android:textAlignment="viewStart"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/tiDescricao"
+        app:layout_constraintTop_toBottomOf="@id/tiDescricao" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/twcorView"
+        android:layout_width="80dp"
+        android:layout_height="15dp"
+        android:layout_marginTop="9dp"
+        android:background="@color/azul"
+        android:text=""
+        android:textAlignment="viewStart"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.025"
+        app:layout_constraintStart_toEndOf="@+id/twcor"
+        app:layout_constraintTop_toBottomOf="@+id/tiDescricao" />
+
+    <TableLayout
+        android:id="@+id/tlColor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:stretchColumns="*"
+        app:layout_constraintStart_toStartOf="@+id/twcor"
+        app:layout_constraintTop_toBottomOf="@+id/twcor">
+
+        <TableRow android:gravity="center">
+
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@color/vermelho" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@color/roxo" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@color/azul" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@color/azulCeleste" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@color/verdeEscuro" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@color/verde" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@color/amarelo" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@color/dourado" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@color/laranja" />
+        </TableRow>
+
+    </TableLayout>
+
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
+
         android:text="Cancelar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tilRaio" />
+        app:layout_constraintTop_toBottomOf="@+id/tlColor" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="Adicionar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tilRaio" />
+        app:layout_constraintTop_toBottomOf="@+id/tlColor" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
