--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="vermelho">#FB0000</color>
+    <color name="roxo">#9C27B0</color>
+    <color name="azul">#3F51B5</color>
+    <color name="azulCeleste">#2196F3</color>
+    <color name="verdeEscuro">#009688</color>
+    <color name="verde">#4CAF50</color>
+    <color name="amarelo">#CDDC39</color>
+    <color name="dourado">#FFC107</color>
+    <color name="laranja">#FF5722</color>
 </resources>
